# graphviz-managed

./: .gitignore  Makefile  README.md  requirements.dev  setup.cfg  tox.ini
.github/workflows/: test.yml
samples/: README.md  basic.py  count.py  diag.py  labels.py
src/graphviz_managed/: __init__.py  custom.py  diagrams.py  logging.py  members.py
tests/: README.md  test_diagrams.py  test_graph.py  test_samples.py  test_wraplabels.py
