[metadata]
name = graphviz-managed
version  = 0.0.1
description = Manage Graphviz graphs in Python prior to rendering
long_description = file: README.md
long_description_content_type = text/markdown
keywords = graphs, graphviz
license = Apache-2.0
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3


[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    graphviz


[options.packages.find]
where=src


[options.extras_require]
diagrams =
    diagrams
